Bug 110730 - [CI][RESUME] igt@kms_chamelium@hdmi-crc-single - crash - Received signal SIGSEGV.
Summary: [CI][RESUME] igt@kms_chamelium@hdmi-crc-single - crash - Received signal SIGS...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: IGT (show other bugs)
Version: XOrg git
Hardware: Other All
: high normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-22 14:22 UTC by Martin Peres
Modified: 2019-11-22 23:52 UTC (History)
1 user (show)

See Also:
i915 platform: ICL
i915 features: display/Other


Attachments

Description Martin Peres 2019-05-22 14:22:49 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6076/re-icl-u/igt@kms_chamelium@hdmi-crc-single.html

	
Starting subtest: hdmi-crc-single
Received signal SIGSEGV.
Stack trace: 
 #0 [fatal_sig_handler+0xd6]
 #1 [killpg+0x40]
 #2 [_dl_rtld_di_serinfo+0xb76]
 #3 [_dl_rtld_di_serinfo+0x165f]
 #4 [_dl_rtld_di_serinfo+0x2f69]
 #5 [_dl_find_dso_for_object+0xa7d]
 #6 [_dl_catch_exception+0x6f]
 #7 [_dl_find_dso_for_object+0x18a]
 #8 [_dl_mcount_wrapper_check+0x7d]
 #9 [_dl_catch_exception+0x6f]
 #10 [_dl_catch_error+0x2f]
 #11 [__libc_dlopen_mode+0x89]
 #12 [pthread_cancel_init+0x2b]
 #13 [pthread_cancel+0x20]
 #14 [chamelium_rpc+0x10f]
 #15 [chamelium_capture+0x44]
 #16 [do_test_display.constprop.25+0x17a]
 #17 [test_display_all_modes.constprop.23+0x101]
 #18 [__real_main1590+0x12b1]
 #19 [main+0x27]
 #20 [__libc_start_main+0xe7]
 #21 [_start+0x2a]
Subtest hdmi-crc-single: CRASH (13.194s)
Comment 1 CI Bug Log 2019-05-22 14:23:23 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* CHAMELIUM: igt@kms_chamelium@hdmi-crc-single - crash - Received signal SIGSEGV.
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6076/re-icl-u/igt@kms_chamelium@hdmi-crc-single.html
Comment 2 Jani Saarinen 2019-05-22 14:46:03 UTC
According to Imre this one is a bug in the test itself leading to the SIGSEGV. Something in the Chamelium RPC call. So not an issue the driver.
Comment 3 Lakshmi 2019-05-31 11:37:24 UTC
Moving to IGT to fix the test.
Comment 4 Lakshmi 2019-05-31 11:37:36 UTC
Moving to IGT to fix the test.
Comment 5 Maarten Lankhorst 2019-06-05 10:29:56 UTC
Hmm seems like an error in the chamelium wrappers. Specifically the call to pthread_cancel seems to be crashing. Need to figure out why, but shouldn't affect real users as this happens in the chamelium code.
Comment 6 emersion 2019-06-05 10:44:54 UTC
Agreed that this is an IGT bug, not a driver bug.

Just sent an IGT patch that attempts to fix the issue.

User impact: the user might experience corrupted frames via HDMI. In other words: we don't check anymore that HDMI is properly working since this test is broken.

Other CRC/frame tests aren't run after a crash (this is the first one).
Comment 7 emersion 2019-06-13 10:45:09 UTC
This bug has only been seen once, 4 weeks ago.
Comment 8 emersion 2019-07-02 13:31:52 UTC
Not seen for a month and a half. Still happened just once.

Let's just close it, and re-open if it happens again.
Comment 9 swathi.dhanavanthri 2019-11-22 23:52:01 UTC
Not seen on drm tip, so closing and archiving this.
Comment 10 CI Bug Log 2019-11-22 23:52:09 UTC
The CI Bug Log issue associated to this bug has been archived.

New failures matching the above filters will not be associated to this bug anymore.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.