lib/igt_chamelium.c
@@ -302,6 +302,7 @@ static xmlrpc_value *__chamelium_rpc_va(struct chamelium *chamelium,
 
 	if (fsm_port) {
 		pthread_cancel(fsm_thread_id);
+		pthread_join(fsm_thread_id, NULL);
 		igt_cleanup_hotplug(monitor_args.mon);
 	}
 
